<resources>
    <string name="app_name">GamersGate</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="platforms">Platforms</string>
    <string name="description">Description:</string>
    <string name="textview">TextView</string>
    <string name="relese">relese</string>
    <string name="genres">Genres :</string>
    <string name="search">Search!</string>
    <string name="name_of_the_game">Name of the Game</string>
    <string name="searchbu">Search</string>
    <string name="favorite_games">favorite Games</string>
    <string name="name">Name:</string>
    <string name="relesedate">ReleseDate:</string>
    <string name="rating">Rating:</string>
    <string name="platformss">Platforms:</string>
    <string name="image_of_the_game">Image of the game</string>
    <string name="pc">Pc</string>
    <string name="ps3">ps3</string>
    <string name="ps4">ps4</string>
    <string name="xbox">xbox</string>
    <string name="swtich">swtich</string>
    <string name="xboxone">xboxone</string>
    <string name="your_favorite_games">YOUR FAVORITE GAMES</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="favorites">Favorites</string>
</resources>
